# hackth

./: .env.template  .gitignore  BUSINESS_ROADMAP.md  DEPLOYMENT_GUIDE.md  HACKATHON_DEMO_READY.md  HACKATHON_QUICKSTART.md  HACKATHON_SUBMISSION.md  PHASE_1_DEVELOPMENT_PLAN.md  PRODUCTION_READY_SUMMARY.md  PROJECT_ORGANIZATION.md  PROJECT_REQUIREMENTS.md  README.md  SECURITY_AUDIT_RESULTS.md  advanced_fraud_detector.py  ai_enhanced_fraud_ui.py  check_temp_files.py  comprehensive_risk_testing.py  debug_luxury_dataset.py  demo_llm_integration.py  docker-compose.yml  enterprise_universal_detector.py  final_integration_test.py  focused_fraud_detector.py  fraud-detection-project.md  fraud_analysis_report.md  fraudguard_config.json  fraudguard_enterprise.py  generate_test_data.py  hackathon_demo.py  high_risk_test_transactions.json  install_dependencies.py  llm_integration.py  minimal_fraud_api.py  modern_fraud_dashboard.py  original_fraud_ui.py  pyproject.toml  quick_demo.py  real_world_demo.py  render.yaml  requirements.txt  (+18 more)
archive/: amount_test_demo.py  comprehensive_test.py  controlled_testing.py  enterprise_mapping_ui.py  flask_test.py  quick_fraud_test.py  quick_test.py  real_fraud_test_detector.py  simple_test.py  test_all_datasets.py  test_api_upload.py  validate_focused_system.py
backend/: Dockerfile  customer_management.py  debug_server.py  demo.py  enterprise_api.py  enterprise_multi_dataset_api.py  http_server.py  production_server.py  requirements.txt  run_server.py  simple_server.py  simple_test_server.py  test_api.py  test_model_validation.py  train_ml_model.py  (+1 more)
(+28 files in other folders)
